# 10k-report-analyzer

./: .bruin.yml  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  dashboard.py  docker-compose.yml  pipeline.yml  pyproject.toml  tickers.csv
.github/workflows/: ci.yml
assets/analytics/: business_embeddings.py  financial_ratios.sql  requirements.txt  text_sentiment.py  yoy_trends.sql
assets/ingest/: filing_text_sections.py  financial_statements.py  requirements.txt  sec_filings.py
assets/staging/: financial_metrics.sql
scripts/: seed_universe_embeddings.py
